update overlay styles in Styles.css for fixed positioning and full height on smaller screens

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -77,10 +77,14 @@ body {
 
 @media (max-width: 796px) {
     #overlay-content {
+        position: fixed;
         top: 0;
         left: 0;
         right: 0;
         margin: 0 auto;
         width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
     }
 }
